--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -53,8 +53,14 @@ header {
     color: var(--secondary-background-color);
 }
 .mainlogo {
-  width: auto;
-  height: 60px;
+    font-size: 2.5rem;
+    font-weight: 700;
+    color: #FFF;
+    text-decoration: none;
+    font-family: "Rubik", sans-serif;
+}
+a{
+    text-decoration: none;
 }
 .git {
   width: auto;
